--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@j178/prek": "^0.3.1",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^25.2.0",
     "@types/react": "^19.2.10",
